--- a/package.json
+++ b/package.json
@@ -43,17 +43,18 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
-    "date-fns": "^4.1.0",
     "ed25519-hd-key": "^1.3.0",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.10.5",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.508.0",
+    "motion": "^12.10.5",
     "next": "15.3.2",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
-    "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.3",
+    "react-icons": "^5.5.0",
     "react-resizable-panels": "^3.0.1",
     "recharts": "^2.15.3",
     "sonner": "^2.0.3",
