--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "cmdk": "^1.1.1",
     "ed25519-hd-key": "^1.3.0",
     "embla-carousel-react": "^8.6.0",
+    "ethers": "^6.14.0",
     "framer-motion": "^12.10.5",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.508.0",
